--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,7 @@ jobs:
             rust: nightly
           - target: x86_64-pc-windows-gnu
             os: windows-latest
-            rust: nightly-x86_64-gnu
+            rust: nightly
           - target: i686-pc-windows-msvc
             os: windows-latest
             rust: nightly
