--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 **/generated-archives/*.tar* filter=lfs-disabled diff=lfs merge=lfs -text
+*.tar diff=tar
 
 # assure line feeds don't interfere with our working copy hash
 **/tests/fixtures/**/*.sh text crlf=input	eol=lf
