--- a/gix-command/Cargo.toml
+++ b/gix-command/Cargo.toml
@@ -25,4 +25,6 @@ shell-words = "1.0"
 [dev-dependencies]
 gix-testtools = { path = "../tests/tools" }
 once_cell = "1.21.3"
+
+[target.'cfg(not(unix))'.dev-dependencies]
 os_str_bytes = { version = "^6.6.1", default-features = false, features = ["conversions"] }
