--- a/gix-command/Cargo.toml
+++ b/gix-command/Cargo.toml
@@ -24,4 +24,6 @@ shell-words = "1.0"
 
 [dev-dependencies]
 gix-testtools = { path = "../tests/tools" }
+
+[target.'cfg(not(unix))'.dev-dependencies]
 os_str_bytes = { version = "^6.6.1", default-features = false, features = ["conversions"] }
