--- a/gix-trace/Cargo.toml
+++ b/gix-trace/Cargo.toml
@@ -35,6 +35,9 @@ tracing-core = { version = "0.1.31", optional = true }
 
 document-features = { version = "0.2.0", optional = true }
 
+[dev-dependencies]
+array-init-cursor = { version = "0.2.0" }
+
 [package.metadata.docs.rs]
 all-features = true
 features = ["document-features"]
