Run only 2 parallel test processes in test-ext4-casefold
This seemed to make the bug *easier* to reproduce (compared to
larger values) locally, so maybe it will surface it on CI even in
GNU/Linux.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,7 +224,7 @@ jobs:
         with:
           tool: nextest
       - name: Test (nextest)
-        run: cargo nextest run --workspace --no-fail-fast
+        run: cargo nextest run --workspace --no-fail-fast --test-threads=2
 
   test-fixtures-windows:
     runs-on: windows-latest
