--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,7 +186,12 @@ jobs:
         run: git diff --exit-code  # If this fails, the fix is usually to commit a regenerated archive.
 
   test-ext4-casefold:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm]
+      fail-fast: false
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Set up casefold directory
