Run only the test(s) of interest
In `test-linux-casefold`, this runs only the tests that are
duplicates of each other, where the failure has been observed,
rather than first running the whole test suite.

The reason is to try to build fewer crates and test executables,
since this is currenntly failing because it runs out of space on
the ext4 image whose size is itself constrained by the amount of
available memory for the tmpfs filesystem on which the image is
created.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,9 +279,7 @@ jobs:
           # Add another "9" digit to the upper bound of the label range.
           sed -Ei 's/^(#\[test_matrix\(0\.\.=)([[:digit:]]+\)])$/\19\2/' \
             gix-worktree-state/tests/state/checkout.rs
-      - name: Test (nextest)
-        run: cargo nextest run --workspace --no-fail-fast
-      - name: Retest writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed (nextest)
+      - name: Test writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed (nextest)
         run: |
           set -x
           for i in {1..20}; do
