Try to fail at least as often, with less overhead
This combines a few changes:

- Only report the status of tests that actually fail.
- Run the `cargo nextest` run command once, not 20 times.
- Multiply the number of test cases by another factor of 10.
- Stop after the first failing case.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,17 +247,14 @@ jobs:
           tool: nextest
       - name: More writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed reps
         run: |
-          # Add another "9" digit to the upper bound of the label range.
-          sed -Ei 's/^(#\[test_matrix\(0\.\.=)([[:digit:]]+\)])$/\19\2/' \
+          # Add two more "9" digits to the upper bound of the label range.
+          sed -Ei 's/^(#\[test_matrix\(0\.\.=)([[:digit:]]+\)])$/\199\2/' \
             gix-worktree-state/tests/state/checkout.rs
       - name: Test writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed (nextest)
         run: |
-          set -x
-          for i in {1..20}; do
-            cargo nextest run -p gix-worktree-state-tests \
-              writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed \
-              --no-fail-fast --test-threads=2
-          done
+          cargo nextest run -p gix-worktree-state-tests \
+            writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed \
+            --status-level=fail --test-threads=2
 
   test-fixtures-windows:
     runs-on: windows-latest
