--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,11 +188,11 @@ jobs:
   test-ext4-casefold:
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm]
-        num: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        os-suffix: ['22.04', '24.04', '22.04-arm', '24.04-arm']
+        rep: [A, B, C, D, E]
       fail-fast: false
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-${{ matrix.os-suffix }}
 
     steps:
       - name: Warn if we could use tmpfs mounted with `-o casefold` instead
