Undiversify runners but vary test parallelism
Since varying `runs-on` didn't surface more errors, nor help smooth
out inconsistencies across runs.

The `*-arm` runners seem to have fewer errors with the particular
way the tests are running now, so this just uses `ubuntu-latest`.

This also adjusts `rep`, having it take on more values, so as to
more than make up for what would otherwise be a smaller number of
jobs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,11 +188,11 @@ jobs:
   test-ext4-casefold:
     strategy:
       matrix:
-        os-suffix: ['22.04', '24.04', '22.04-arm', '24.04-arm']
-        rep: [A, B, C, D, E]
+        parallel-tests: [2, 3, 4]
+        rep: [A, B, C, D, E, F, G, H]
       fail-fast: false
 
-    runs-on: ubuntu-${{ matrix.os-suffix }}
+    runs-on: ubuntu-latest
 
     steps:
       - name: Warn if we could use tmpfs mounted with `-o casefold` instead
@@ -244,7 +244,7 @@ jobs:
         run: |
           cargo nextest run -p gix-worktree-state-tests \
             writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed \
-            --status-level=fail --test-threads=2
+            --status-level=fail --test-threads=${{ matrix.parallel-tests }}
 
   test-fixtures-windows:
     runs-on: windows-latest
