Try to avoid parallel checkout in `test-ext4-casefold`
This attempts to turn off parallelism within individual runs of
writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed
by passing `--no-default-features` to turn off the
`gix-features-parallel` feature in `gix-worktree-state/Cargo.toml`
(which is how `gix-features/parallel` is enabled in those tests).

This is to check if the multithreading parallelism within the
checkout operations participates in #2006. See:
https://github.com/GitoxideLabs/gitoxide/issues/2006#issuecomment-2878911616

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -249,7 +249,7 @@ jobs:
             gix-worktree-state/tests/state/checkout.rs
       - name: Test writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed (nextest)
         run: |
-          cargo nextest run -p gix-worktree-state-tests \
+          cargo nextest run -p gix-worktree-state-tests --no-default-features \
             writes_through_symlinks_are_prevented_even_if_overwriting_is_allowed \
             --status-level=fail --test-threads=${{ matrix.parallel-tests }}
 
