Test out macOS 15 on CI
`macos-latest` is going to automatically get `macos-15`, which is
most likely a good thing for us, most likely with no downsides.

This manual change is to test for problems that automatic change
may cause. (There is probably no reason to consider merging this to
`main`.)

For context, see:
https://github.blog/changelog/2025-07-11-upcoming-changes-to-macos-hosted-runners-macos-latest-migration-and-xcode-support-policy-updates/

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,7 +208,7 @@ jobs:
       matrix:
         os:
           - windows-latest
-          - macos-latest
+          - macos-15
           - ubuntu-latest
           - ubuntu-24.04-arm
 
@@ -474,7 +474,7 @@ jobs:
           - ubuntu-latest
           # We consider this script read-only and its effect is the same everywhere.
           # However, when changes are made to `etc/copy-packetline.sh`, re-enable the other platforms for testing.
-    #       - macos-latest
+          - macos-15
     #       - windows-latest
 
     runs-on: ${{ matrix.os }}
