Temporarily let `ci.yml` run on "run-ci" branches' `pull_request`
So far, the forthcoming experiment using `dynamic-uses` has been
the only need to for this. So my plan is not to propose this change
upstream, but only to use it for that experiment, at least for now.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
   pull_request:
     branches:
       - main
+      - 'run-ci/**'     # FIXME: Remove after testing.
+      - '**/run-ci/**'  # FIXME: Remove after testing.
   workflow_dispatch:
 
 permissions:
