--- a/.github/actions/upgrade-git-for-windows/action.yml
+++ b/.github/actions/upgrade-git-for-windows/action.yml
@@ -13,6 +13,10 @@ runs:
   using: composite
 
   steps:
+    - name: Step that shall be removed  # FIXME: Remove this step after testing.
+      run: |
+        Write-Output '::notice:: This notice is for testing and shall be removed.'
+      shell: pwsh
     - name: Report version/build of Git in this runner image
       run: git version --build-options
       shell: pwsh
