Temporarily show the composite action's files
Instead of the test notice.

--- a/.github/actions/upgrade-git-for-windows/action.yml
+++ b/.github/actions/upgrade-git-for-windows/action.yml
@@ -13,9 +13,8 @@ runs:
   using: composite
 
   steps:
-    - name: Step that shall be removed  # FIXME: Remove this step after testing.
-      run: |
-        Write-Output '::notice:: This notice is for testing and shall be removed.'
+    - name: List files of this composite action  # FIXME: Remove this step after testing.
+      run: Get-ChildItem -Recurse -Name ${{ github.action_path }}
       shell: pwsh
     - name: Report version/build of Git in this runner image
       run: git version --build-options
