--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -401,6 +401,7 @@ jobs:
     strategy:
       matrix:
         target: [ wasm32-unknown-unknown, wasm32-wasip1 ]
+      fail-fast: false
 
     env:
       TARGET: ${{ matrix.target }}
