Add `gix-diff` WASM check, even though `gix-path` covers it
This adds an explicit check of `gix-diff` in the WASM jobs, even
though the `gix-path` check currently covers `gix-diff` (its `wasm`
feature enables the `wasm` feature of its `gix-diff` dependency).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -461,7 +461,7 @@ jobs:
       - name: crates with 'wasm' feature
         run: |
           set -x
-          for crate in gix-pack; do
+          for crate in gix-diff gix-pack; do
             cargo build -p "$crate" --features wasm --target "$TARGET"
           done
       - name: gix-pack with all features (including wasm)
