Check if they'll still need it in Debian 13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -318,7 +318,7 @@ jobs:
 
     runs-on: ${{ matrix.runner-os }}
 
-    container: ${{ matrix.container-arch }}/debian:bookworm-slim
+    container: ${{ matrix.container-arch }}/debian:trixie-slim
 
     steps:
       - name: Prerequisites
