Check if host-native libstdc++ is effective in Debian 13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -331,6 +331,7 @@ jobs:
             git
             jq
             libssl-dev
+            libstdc++6:${{ matrix.runner-arch }}  # To support external 64-bit Node.js for actions.
             pkgconf
             python3-minimal
           )
